Remove disable "UseParNewGC" option